gitops/apps/feedback-dev/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol:
      port: 80
      targetPort: 3000
